--- a/DeploymentManager GUI/DeploymentManager GUI.csproj
+++ b/DeploymentManager GUI/DeploymentManager GUI.csproj
@@ -35,6 +35,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomConfiguration.cs" />
     <Compile Include="DeploymentBuilder.cs" />
     <Compile Include="DeploymentManager.cs" />
     <Compile Include="Form1.cs">
