--- a/DeploymentManager.csproj
+++ b/DeploymentManager.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomConfiguration.cs" />
     <Compile Include="DeploymentManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="AssemblyInfo.cs" />
