--- a/DeploymentManager GUI/DeploymentManager GUI.csproj
+++ b/DeploymentManager GUI/DeploymentManager GUI.csproj
@@ -47,7 +47,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomConfiguration.cs" />
+    <Compile Include="CustomConfig\AppServer.cs" />
+    <Compile Include="CustomConfig\AppServerCollection.cs" />
+    <Compile Include="CustomConfig\DBName.cs" />
+    <Compile Include="CustomConfig\DBServer.cs" />
+    <Compile Include="CustomConfig\Environment.cs" />
+    <Compile Include="CustomConfig\EnvironmentCollection.cs" />
+    <Compile Include="CustomConfig\EnvironmentCollectionSection.cs" />
+    <Compile Include="CustomConfig\ramQServer.cs" />
+    <Compile Include="CustomConfig\ramQServerCollection.cs" />
+    <Compile Include="CustomConfig\SMServer.cs" />
+    <Compile Include="CustomConfig\SMServerCollection.cs" />
+    <Compile Include="CustomConfig\VirtualDirectory.cs" />
     <Compile Include="DeploymentBuilder.cs" />
     <Compile Include="DeploymentManager.cs" />
     <Compile Include="Form1.cs">
@@ -70,6 +81,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="App.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -81,12 +93,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config">
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
